--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "faker": "^2.1.2",
     "jsonwebtoken": "^0.3.0",
     "lodash": "~2.4.1",
+    "markdown": "^0.5.0",
     "method-override": "~1.0.0",
     "mongoose": "~3.8.8",
+    "mongoose-simple-random": "^0.3.0",
     "mongoose-times": "^0.1.0",
     "morgan": "~1.0.0",
     "passport": "~0.2.0",
