--- a/bower.json
+++ b/bower.json
@@ -11,13 +11,12 @@
     "angular-resource": ">=1.2.*",
     "angular-cookies": ">=1.2.*",
     "angular-sanitize": ">=1.2.*",
-    "angular-bootstrap": "~0.11.0",
     "font-awesome": ">=4.1.0",
     "lodash": "~2.4.1",
     "angular-socket-io": "~0.6.0",
     "angular-ui-router": "~0.2.10",
     "animate.css": "~3.2.0",
-    "angular-carousel": "~0.3.10"
+    "angular-bootstrap": "~0.12.0"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
