--- a/package.json
+++ b/package.json
@@ -3,35 +3,42 @@
   "version": "0.0.0",
   "main": "server/app.js",
   "dependencies": {
-    "bluebird": "^2.9.7",
-    "body-parser": "~1.5.0",
+    "bluebird": "^2.9.12",
+    "body-parser": "^1.12.0",
     "composable-middleware": "^0.3.0",
-    "compression": "~1.0.1",
-    "connect-mongo": "^0.4.1",
-    "cookie-parser": "~1.0.1",
-    "ejs": "~0.8.4",
-    "errorhandler": "~1.0.0",
-    "express": "~4.0.0",
-    "express-jwt": "^0.1.3",
-    "express-session": "~1.0.2",
+    "compression": "^1.4.1",
+    "connect-mongo": "^0.4.2",
+    "cookie-parser": "^1.3.4",
+    "ejs": "^0.8.8",
+    "elasticsearch": "^3.1.3",
+    "elmongo": "^0.1.9",
+    "errorhandler": "^1.3.4",
+    "express": "^4.12.0",
+    "express-jwt": "^0.1.4",
+    "express-session": "^1.10.3",
     "faker": "^2.1.2",
     "jsonwebtoken": "^0.3.0",
-    "lodash": "~2.4.1",
+    "lodash": "^2.4.1",
     "markdown": "^0.5.0",
-    "method-override": "~1.0.0",
+    "method-override": "^1.0.2",
+    "mongodb": "^1.4.31",
+    "mongoosastic": "^2.0.6",
     "mongoose": "~3.8.8",
     "mongoose-simple-random": "^0.3.0",
+    "mongoose-text-search": "0.0.2",
     "mongoose-times": "^0.1.0",
     "morgan": "~1.0.0",
+    "node-icu-wordsplit": "lastest",
     "passport": "~0.2.0",
     "passport-facebook": "latest",
     "passport-google-oauth": "latest",
-    "passport-local": "~0.1.6",
+    "passport-local": "^0.1.6",
     "passport-twitter": "latest",
-    "serve-favicon": "~2.0.1",
+    "serve-favicon": "^2.2.0",
     "socket.io": "^1.0.6",
-    "socket.io-client": "^1.0.6",
-    "socketio-jwt": "^2.0.2"
+    "socket.io-client": "^1.3.4",
+    "socketio-jwt": "^2.0.2",
+    "wordcut": "^0.7.4"
   },
   "devDependencies": {
     "grunt": "~0.4.4",
