--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,10 @@
     "angular-socket-io": "~0.6.0",
     "angular-ui-router": "~0.2.10",
     "animate.css": "~3.2.0",
-    "angular-bootstrap": "~0.12.0"
+    "angular-bootstrap": "~0.12.0",
+    "angular-timeago": "~0.1.8",
+    "textAngular": "~1.3.7",
+    "ng-tags-input": "~2.2.0"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
