--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "compression": "^1.4.1",
     "connect-mongo": "^0.4.2",
     "cookie-parser": "^1.3.4",
-    "ejs": "^0.8.8",
+    "ejs": "^2.3.1",
     "elasticsearch": "^3.1.3",
     "elmongo": "^0.1.9",
     "errorhandler": "^1.3.4",
@@ -17,18 +17,16 @@
     "express-jwt": "^0.1.4",
     "express-session": "^1.10.3",
     "faker": "^2.1.2",
+    "icu-wordsplit": "^0.2.3",
     "jsonwebtoken": "^0.3.0",
     "lodash": "^2.4.1",
     "markdown": "^0.5.0",
     "method-override": "^1.0.2",
     "mongodb": "^1.4.31",
-    "mongoosastic": "^2.0.6",
-    "mongoose": "~3.8.8",
+    "mongoose": "3.8.23",
     "mongoose-simple-random": "^0.3.0",
-    "mongoose-text-search": "0.0.2",
     "mongoose-times": "^0.1.0",
     "morgan": "~1.0.0",
-    "node-icu-wordsplit": "lastest",
     "passport": "~0.2.0",
     "passport-facebook": "latest",
     "passport-google-oauth": "latest",
