switching to mongoosastic

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "faker": "^2.1.2",
     "icu-wordsplit": "^0.2.3",
     "jsonwebtoken": "^0.3.0",
-    "lodash": "^2.4.1",
+    "lodash": "3.5.0",
     "markdown": "^0.5.0",
     "method-override": "^1.0.2",
     "mongodb": "^1.4.31",
