--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "markdown": "^0.5.0",
     "method-override": "^1.0.2",
     "mongodb": "^1.4.31",
+    "mongoosastic": "^2.0.6",
     "mongoose": "3.8.23",
     "mongoose-simple-random": "^0.3.0",
     "mongoose-times": "^0.1.0",
