--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "angular-bootstrap": "~0.12.0",
     "angular-timeago": "~0.1.8",
     "textAngular": "~1.3.7",
-    "ng-tags-input": "~2.2.0"
+    "ng-tags-input": "~2.2.0",
+    "angular-jqcloud": "~1.0.1"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
