--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "angular-timeago": "~0.1.8",
     "textAngular": "~1.3.7",
     "ng-tags-input": "~2.2.0",
-    "angular-jqcloud": "~1.0.1"
+    "angular-jqcloud": "~1.0.1",
+    "angular-carousel": "~0.3.10"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
