--- a/bower.json
+++ b/bower.json
@@ -15,12 +15,13 @@
     "lodash": "3.5.0",
     "angular-socket-io": "~0.6.0",
     "angular-ui-router": "~0.2.10",
-    "animate.css": "~3.2.0",
+    "animate.css": "~3.2.3",
     "angular-bootstrap": "~0.12.0",
     "angular-timeago": "~0.1.8",
     "textAngular": "~1.3.7",
     "ng-tags-input": "~2.2.0",
-    "angular-jqcloud": "~1.0.1"
+    "angular-jqcloud": "~1.0.1",
+    "headroom.js": "~0.7.0"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
