--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "method-override": "^1.0.2",
     "mongodb": "^1.4.31",
     "mongoosastic": "^2.0.6",
-    "mongoose": "3.8.23",
+    "mongoose": "^3.8.25",
     "mongoose-simple-random": "^0.3.0",
     "mongoose-times": "^0.1.0",
     "morgan": "~1.0.0",
