add $ add grunt rev task

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-jwt": "^0.1.4",
     "express-session": "^1.10.3",
     "faker": "^2.1.2",
+    "grunt-usemin": "^3.0.0",
     "jsonwebtoken": "^0.3.0",
     "lodash": "3.5.0",
     "markdown": "^0.5.0",
@@ -57,7 +58,7 @@
     "grunt-ng-annotate": "^0.2.3",
     "grunt-rev": "~0.1.0",
     "grunt-svgmin": "~0.4.0",
-    "grunt-usemin": "~2.1.1",
+    "grunt-usemin": "latest",
     "grunt-env": "~0.4.1",
     "grunt-node-inspector": "~0.1.5",
     "grunt-nodemon": "~0.2.0",
