--- a/package.json
+++ b/package.json
@@ -13,19 +13,20 @@
     "elasticsearch": "^3.1.3",
     "elmongo": "^0.1.9",
     "errorhandler": "^1.3.4",
-    "express": "^4.12.0",
+    "express": "^4.12.3",
     "express-jwt": "^0.1.4",
     "express-session": "^1.10.3",
     "faker": "^2.1.2",
     "grunt-usemin": "^3.0.0",
     "grunt-wiredep": "^2.0.0",
+    "json3": "^3.3.2",
     "jsonwebtoken": "^0.3.0",
     "lodash": "3.5.0",
     "markdown": "^0.5.0",
     "method-override": "^1.0.2",
-    "mongodb": "^1.4.31",
-    "mongoosastic": "^2.0.6",
-    "mongoose": "~3.8.x",
+    "mongodb": "^1.4.35",
+    "mongoosastic": "^2.1.0",
+    "mongoose": "^3.8.25",
     "mongoose-simple-random": "^0.3.0",
     "mongoose-times": "^0.1.0",
     "morgan": "~1.0.0",
@@ -35,8 +36,8 @@
     "passport-local": "^0.1.6",
     "passport-twitter": "latest",
     "serve-favicon": "^2.2.0",
-    "socket.io": "^1.0.6",
-    "socket.io-client": "^1.3.4",
+    "socket.io": "^1.3.5",
+    "socket.io-client": "^1.3.5",
     "socketio-jwt": "^2.0.2",
     "wordcut": "^0.7.4"
   },
