--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,9 @@
     "ng-tags-input": "~2.2.0",
     "angular-jqcloud": "~1.0.1",
     "headroom.js": "~0.7.0",
-    "animate-css": "~3.2.6"
+    "animate-css": "~3.2.6",
+    "angulartics": "~0.17.2",
+    "angular-facebook": "~0.2.3"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
