--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,9 @@
     "headroom.js": "~0.7.0",
     "animate-css": "~3.2.6",
     "angulartics": "~0.17.2",
-    "angular-facebook": "~0.2.3"
+    "angular-facebook": "~0.2.3",
+    "angular-parallax": "~0.0.1",
+    "angularjs-viewhead": "~0.0.1"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
