--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,7 @@
     "lodash": "3.5.0",
     "angular-socket-io": "~0.6.0",
     "angular-ui-router": "~0.2.13",
-    "angular-bootstrap": "~0.12.0",
+    "angular-bootstrap": "~0.12.1",
     "angular-timeago": "~0.1.8",
     "textAngular": "~1.3.7",
     "ng-tags-input": "~2.2.0",
@@ -24,11 +24,10 @@
     "animate-css": "~3.2.6",
     "angulartics": "~0.17.2",
     "angular-facebook": "~0.2.3",
-    "angular-parallax": "~0.0.1",
     "angularjs-viewhead": "~0.0.1",
-    "angular-carousel": "~0.3.10",
     "scroll-animate-directive": "~0.1.2",
-    "angular-animate": "~1.3.15"
+    "angular-animate": "~1.3.15",
+    "ng-parallax": "~0.1.8"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
