--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ejs": "^2.3.1",
     "elasticsearch": "^3.1.3",
     "elmongo": "^0.1.9",
+    "email-templates": "^1.2.1",
     "errorhandler": "^1.3.4",
     "express": "^4.12.3",
     "express-jwt": "^0.1.4",
@@ -30,6 +31,7 @@
     "mongoose-simple-random": "^0.3.0",
     "mongoose-times": "^0.1.0",
     "morgan": "~1.0.0",
+    "nodemailer": "^1.3.4",
     "passport": "~0.2.0",
     "passport-facebook": "latest",
     "passport-google-oauth": "latest",
